--- a/client/src/App.css
+++ b/client/src/App.css
@@ -144,6 +144,20 @@ main {
   transform: translateY(-5px);
 }
 
+.header {
+  height: 8em;
+  max-width: 1100px;
+  width: 95%;
+  margin: 0 auto;
+  justify-content: end;
+}
+
+@media (max-width: 600px) {
+  .header {
+    height: 6em;
+  }
+}
+
 @media (max-width: 600px) {
   .section {
     margin-top: 4em;
