--- a/client/src/components/Navbar/navbar.css
+++ b/client/src/components/Navbar/navbar.css
@@ -14,6 +14,11 @@
   margin-top: 0.4em;
 }
 
+.navbar-container {
+  justify-content: end;
+  display: flex;
+}
+
 @media (max-width: 600px) {
   .nav__list {
     display: none;
