added chat layout for new interviews

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -74,7 +74,8 @@ main {
 
 .link--nav {
   color: var(--clr-fg);
-  font-weight: 500;
+  font-weight: bold;
+  font-size: larger;
 }
 
 .link--icon {
