--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,6 +11,11 @@
   box-sizing: border-box;
 }
 
+*:disabled {
+  cursor: not-allowed !important;
+  opacity: 0.5 !important;
+}
+
 html {
   scroll-behavior: smooth;
 }
